Added threading. Still working on logging..

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,12 @@
 [general]
-data_fetcher_sleep_time = 10
 credentials_file = sources/credentials.json
+db_file = dework.db
+
+[retriever]
+sleep_time = 60
+
+[presenter]
+sleep_time = 2
 
 [sources]
 environmental = sources/environmental.json
