--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,13 @@ db_file = dework.db
 sleep_time = 60
 
 [presenter]
-sleep_time = 2
+screen_width = 300
+screen_height = 900
+font = Monospace
+font_size = 18
+margin = 10
+delta_y = 1
+sleep_time = 0.01
 
 [sources]
 environmental = sources/environmental.json
