option to have different margins

--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,8 @@ screen_width = 300
 screen_height = 900
 font = Monospace
 font_size = 18
-margin = 10
+margin_x = 10
+margin_y = 30
 delta_y = 1
 sleep_time = 0.01
 
