--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,11 @@
 [general]
 credentials_file = credentials.json
 db_file = dework.db
+logging_path = logs/dework.log
 
 [retriever]
 sleep_time = 60
+logging_path = logs/retriever/dework.log
 
 [presenter]
 screen_width = 320
@@ -14,6 +16,7 @@ margin_x = 10
 margin_y = 20
 delta_y = 1
 sleep_time = 0.01
+logging_path = logs/presenter/dework.log
 
 [sources]
 environmental = sources/environmental.json
