--- a/config.ini
+++ b/config.ini
@@ -17,6 +17,8 @@ margin_y = 20
 delta_y = 1
 sleep_time = 0.03
 logging_path = logs/presenter/dework.log
+window_pos_x = 50
+window_pos_y = 50
 
 [sources]
 environmental = sources/environmental.json
