--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,7 @@ logging_path = logs/retriever/dework.log
 [presenter]
 screen_width = 320
 screen_height = 960
-font = Monospace
+font = Bitstream Vera Sans Mono
 font_size = 18
 margin_x = 10
 margin_y = 20
